# bse4u

./: .gitignore  Equity.csv  README.md  bse_stock.py  constants.py  kpi.py  pyproject.toml  records  requirements.txt  scratch1.py  stock_dash.py
