[tool.poetry]
name = "bsestockanalysis"
version = "0.1.0"
description = "Predict stock prices (univariate) - Uses ARIMA model"
authors = ["Karan Rajagopalan <karan83k@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
dash = "2.0.0"
matplotlib = "3.5.1"
numpy = "1.21.2"
pandas = "1.3.5"
plotly = "5.5.0"
requests = "2.27.1"
statsmodels = "0.13.1"

[tool.poetry.group.dev.dependencies]
poetry = "^1.2.2"
pipreqs = "^0.4.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
